--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 
   <!-- font awsome -->
@@ -68,7 +68,7 @@
             Download</button>
         </div>
         <div class="col-lg-6">
-          <img src="images/InappChat.gif" class="app-pic" alt="iphone-mockup">
+          <img src="InappChat.gif" class="app-pic" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -140,10 +140,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-icon" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-icon" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-icon" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-icon" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-icon" src="techcrunch.png" alt="tc-logo">
+    <img class="press-icon" src="tnw.png" alt="tnw-logo">
+    <img class="press-icon" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-icon" src="mashable.png" alt="mashable-logo">
 
   </section>
 
