--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-icon" src="techcrunch.png" alt="tc-logo">
+    <img class="press-icon" src="Techcrunch.png" alt="tc-logo">
     <img class="press-icon" src="tnw.png" alt="tnw-logo">
     <img class="press-icon" src="bizinsider.png" alt="biz-insider-logo">
     <img class="press-icon" src="mashable.png" alt="mashable-logo">
